fix(select): fix misalignment of placeholder and caret

--- a/core/scss/components/select/select.scss
+++ b/core/scss/components/select/select.scss
@@ -51,6 +51,7 @@
       }
 
       .#{$select-label__class} {
+        width: 100%;
         @include flex($jc: space-between);
 
         > i,
